# prompts_service

./: .gitignore  README.md  pyproject.toml  results.json
src/: api.py  data_loader.py  generator.py  logger.py  models.py  vector_store.py
src/prompts/: attribute_extraction.jinja
tests/: test_api.py
